--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "6694b27a-7f2b-41da-9dea-d3f4793b6534"
 authors = ["W. Joe Meese <meese022@umn.edu> and contributors"]
 version = "0.1.0"
 
+[deps]
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+
 [compat]
 julia = "1.3"
 
