Change `CI` schedule and fix typo

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -6,7 +6,7 @@ on:
     tags: '*'
   pull_request:
   schedule:
-    cron: '0 0/4 * * *'
+    - cron: '0 0/24 * * *'
 concurrency:
   # Skip intermediate builds: always.
   # Cancel intermediate builds: only if it is a pull request build.
