--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["W. Joe Meese <meese022@umn.edu> and contributors"]
 version = "0.1.0"
 
 [deps]
+LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
