--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,11 @@
 name = "OnlineLogBinning"
 uuid = "6694b27a-7f2b-41da-9dea-d3f4793b6534"
 authors = ["W. Joe Meese <meese022@umn.edu> and contributors"]
-version = "0.3.0"
+version = "0.4.0"
 
 [deps]
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
+Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
