--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 LsqFit = "0.12"
 Measurements = "2"
 StaticArrays = "1"
+Statistics = "1"
 julia = "1.3"
 
 [extras]
